[gd_scene load_steps=13 format=2]

[ext_resource path="res://game/rooms/MediumRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/objects/JumpPad.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/objects/Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/objects/ClimbingPad.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/objects/FloorRise.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/objects/GrappleTarget.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/maps/tests/TestMedium.gd" type="Script" id=8]
[ext_resource path="res://game/targets/Target.tscn" type="PackedScene" id=9]
[ext_resource path="res://game/objects/Walkway.tscn" type="PackedScene" id=10]
[ext_resource path="res://game/objects/Wind15.tscn" type="PackedScene" id=11]
[ext_resource path="res://game/maps/tests/TestMedium.lmbake" type="BakedLightmapData" id=12]

[node name="TestMedium" type="Spatial"]
script = ExtResource( 8 )

[node name="Environment" type="Spatial" parent="."]

[node name="MediumRoom" parent="Environment" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00187969, 0, -0.00732303 )

[node name="FloorRise" parent="Environment" instance=ExtResource( 5 )]

[node name="ClimbingPad" parent="Environment" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5, 0, -20 )

[node name="ClimbingPad2" parent="Environment" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5, 5, -20 )

[node name="ClimbingPad3" parent="Environment" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 1, 0, 1, 4.37114e-08, 8.74228e-08, 8.74228e-08, 3.82137e-15, -1, -5.5, 10.5, -20 )

[node name="ClimbingPad4" parent="Environment" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 10, -20 )

[node name="Platform1" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 8.5, -17.5 )

[node name="JumpPad1" parent="Environment" instance=ExtResource( 2 )]
transform = Transform( 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 5, 10, -17.5 )

[node name="Platform2" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 16.5, -17.5 )

[node name="GrappleTarget" parent="Environment" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 28, -7 )

[node name="Platform3" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5, 21.5, 0.5 )

[node name="Walkway1" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5, 21.5, 5.5 )

[node name="Walkway2" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5, 21.5, 10.5 )

[node name="ClimbingPad5" parent="Environment" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5, 18, 20 )

[node name="ClimbingPad6" parent="Environment" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5, 23, 20 )

[node name="ClimbingPad7" parent="Environment" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -18, 28.5, 20 )

[node name="Platform4" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.5, 23.5, 17.5 )

[node name="GrappleTarget2" parent="Environment" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 34, 17 )

[node name="Platform5" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 27.5, 17.5 )

[node name="Walkway3" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 27.5, 12.5 )

[node name="Walkway4" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 27.5, 7.5 )

[node name="Walkway5" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.5, 27.5, 5.5 )

[node name="Platform6" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.5, 21.5, 5.5 )

[node name="JumpPad" parent="Environment" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 17.5, 23, 5.4 )

[node name="Wind15" parent="Environment" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, -5.96046e-08, 0, 5.96046e-08, 1, 18, 22, -18 )

[node name="Platform7" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5, 29.5, -17.5 )

[node name="OmniLight" type="OmniLight" parent="Environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 37, 0 )
light_size = 1.0
light_bake_mode = 2
shadow_enabled = true
omni_range = 47.0

[node name="BakedLightmap" type="BakedLightmap" parent="Environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0 )
extents = Vector3( 21, 21, 21 )
light_data = ExtResource( 12 )

[node name="Player" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Target1" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 22.5, 0.5 )
enabled = false

[node name="Target2" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 28.5, 17.5 )
enabled = false

[node name="Target3" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5, 30.5, -17.5 )
enabled = false

[connection signal="fade_complete" from="Player" to="." method="_on_Player_fade_complete"]
[connection signal="target_triggered" from="Target1" to="." method="_on_Target1_target_triggered"]
[connection signal="target_triggered" from="Target2" to="." method="_on_Target2_target_triggered"]
[connection signal="target_triggered" from="Target3" to="." method="_on_Target3_target_triggered"]
